--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,7 @@
 baseURL = "https://saiki.github.io/"
 languageCode = "ja-jp"
 title = "saiki.github.io"
-theme = "ananke"
+theme = "beautifulhugo"
+
+[params]
+	twitter = "https://twitter.com/a_saiki"
