--- a/config.toml
+++ b/config.toml
@@ -5,4 +5,4 @@ theme = "beautifulhugo"
 
 [params]
 	twitter = "https://twitter.com/a_saiki"
-	googleAnalytics = UA-105148292-1
+	googleAnalytics = "UA-105148292-1"
